# aoc2023

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_commands.json  perf.data.old  udo apt-get install libiberty-dev binutils-dev
cmake/: CompilerWarnings.cmake  StandardProjectSettings.cmake
day01/: CMakeLists.txt  main.cpp
day02/: CMakeLists.txt  main.cpp
day03/: CMakeLists.txt  a.py  main.cpp
day04/: CMakeLists.txt  main.cpp
day05/: CMakeLists.txt  main.cpp
day06/: CMakeLists.txt  main.cpp  main2.cpp
day07/: CMakeLists.txt  main.cpp
day08/: CMakeLists.txt  main.cpp
day09/: CMakeLists.txt  main.cpp
day10/: CMakeLists.txt  main.cpp
day11/: CMakeLists.txt  main.cpp
day12/: CMakeLists.txt  main.cpp
day13/: CMakeLists.txt  main.cpp
day14/: CMakeLists.txt  main.cpp
day15/: CMakeLists.txt  main.cpp
day16/: CMakeLists.txt  main.cpp
